--- a/arch/arm/boot/dts/14013/msm-pm8226.dtsi
+++ b/arch/arm/boot/dts/14013/msm-pm8226.dtsi
@@ -38,12 +38,19 @@
 					"resin-bark", "kpdpwr-resin-bark";
 			qcom,pon-dbc-delay = <15625>;
 			qcom,system-reset;
-			qcom,s3-debounce = <32>;
+			qcom,s3-debounce = <128>;
 
 			qcom,pon_1 {
 				qcom,pon-type = <0>;
 				qcom,pull-up = <1>;
 				linux,code = <116>;
+//#ifdef VENDOR_EDIT
+//Lycan.Wang@Prd.BasicDrv, 2014-05-10 Add for long press power-key to reset
+				qcom,s1-timer = <6720>;
+				qcom,s2-timer = <2000>;
+				qcom,s2-type = <7>;
+				qcom,support-reset = <1>;
+//#endif /* VENDOR_EDIT */
 			};
 
 			qcom,pon_2 {
@@ -69,7 +76,8 @@
 
 		pm8226_chg: qcom,charger {
 			spmi-dev-container;
-			compatible = "qcom,qpnp-charger";
+			//compatible = "qcom,qpnp-charger";
+			compatible = "qcom,qpnp-charger-disable";
 			#address-cells = <1>;
 			#size-cells = <1>;
 			status = "disabled";
@@ -189,12 +197,14 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 			status = "disabled";
-
+	/* Fanhong.Kong@ProDrv.CHG modify 2014.5.8*/
+			qcom,r-sense-20uohm = <20000>;
 			qcom,r-sense-uohm = <10000>;
 			qcom,v-cutoff-uv = <3400000>;
-			qcom,max-voltage-uv = <4200000>;
+			qcom,max-voltage-uv = <4340000>;
 			qcom,r-conn-mohm = <0>;
-			qcom,shutdown-soc-valid-limit = <100>;
+			/* Fanhong.Kong@ProDrv.CHG modify 2014.2.28*/
+			qcom,shutdown-soc-valid-limit = <20>;
 			qcom,adjust-soc-low-threshold = <15>;
 			qcom,ocv-voltage-high-threshold-uv = <3750000>;
 			qcom,ocv-voltage-low-threshold-uv = <3650000>;
@@ -203,10 +213,11 @@
 			qcom,low-soc-calculate-soc-ms = <5000>;
 			qcom,calculate-soc-ms = <20000>;
 			qcom,chg-term-ua = <100000>;
-			qcom,batt-type = <0>;
-			qcom,tm-temp-margin = <5000>;
+			qcom,batt-type = <7>;
+			/* Fanhong.Kong@ProDrv.CHG modify 2014.2.28*/
+			qcom,tm-temp-margin = <20000>;
 			qcom,low-ocv-correction-limit-uv = <100>;
-			qcom,high-ocv-correction-limit-uv = <250>;
+			qcom,high-ocv-correction-limit-uv = <50>;
 			qcom,hold-soc-est = <3>;
 			qcom,low-voltage-threshold = <3420000>;
 			qcom,bms-vadc = <&pm8226_vadc>;
@@ -215,6 +226,10 @@
 
 			qcom,bms-iadc@3800 {
 				reg = <0x3800 0x100>;
+			};
+			/* Fanhong.Kong@ProDrv.CHG add 2014.2.28*/
+			qcom,vref-ctrl@124a {
+				reg = <0x124a 0x1>;
 			};
 
 			qcom,bms-bms@4000 {
@@ -349,6 +364,13 @@
 			mpp@a600 {
 				reg = <0xa600 0x100>;
 				qcom,pin-num = <7>;
+				qcom,mode = <4>; 			// A-input 		// QPNP_PIN_MODE_AIN
+				qcom,invert = <0>; //No Invert
+				qcom,output-type = <0>; //CMOS
+				qcom,vin-sel = <2>; //S3 1.8v
+				qcom,src-sel = <0>; 			//MPP Constant	// QPNP_PIN_SEL_FUNC_CONSTANT 
+				qcom,ain-route = <2>; 			// QPNP_PIN_AIN_AMUX_CH7 = 2 for MPP7  // QPNP_PIN_AIN_AMUX_CH8 
+				qcom,master-en = <1>; //Enable MPP		
 			};
 
 			mpp@a700 {
@@ -480,8 +502,10 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 			qcom,qpnp-rtc-write = <0>;
+			/* Yixue.Ge@ProDrv.BL modify for enable rtc powerup
 			qcom,qpnp-rtc-alarm-pwrup = <0>;
-
+			*/
+			qcom,qpnp-rtc-alarm-pwrup = <1>;
 			qcom,pm8226_rtc_rw@6000 {
 				reg = <0x6000 0x100>;
 			};
@@ -843,10 +867,10 @@
 
 		qcom,leds@d300 {
 			compatible = "qcom,leds-qpnp";
-			status = "okay";
+			status = "okay"; //zhengrong.zhang@camera.drv modify for led from tong.han modify
 			reg = <0xd300 0x100>;
 			label = "flash";
-			flash-boost-supply = <&pm8226_chg_boost>;
+			//flash-boost-supply = <&pm8226_chg_boost>; //zhengrong.zhang@camera.drv modify for led
 			pm8226_flash0: qcom,flash_0 {
 				qcom,max-current = <1000>;
 				qcom,default-state = "off";
@@ -860,7 +884,7 @@
 						"flash0_trigger";
 				qcom,id = <1>;
 				linux,name = "led:flash_0";
-				qcom,current = <625>;
+				qcom,current = <120>;
 			};
 
 			pm8226_flash1: qcom,flash_1 {
@@ -876,7 +900,7 @@
 				label = "flash";
 				qcom,id = <2>;
 				linux,name = "led:flash_1";
-				qcom,current = <625>;
+				qcom,current = <120>;
 			};
 
 			pm8226_torch: qcom,flash_torch {
@@ -887,7 +911,7 @@
 				label = "flash";
 				qcom,id = <1>;
 				linux,name = "led:flash_torch";
-				qcom,current = <120>;
+				qcom,current = <50>;
 				qcom,torch-enable;
 			};
                 };
