--- a/arch/arm/configs/neo5_defconfig
+++ b/arch/arm/configs/neo5_defconfig
@@ -517,7 +517,6 @@ CONFIG_CRYPTO_DEV_QCEDEV=m
 CONFIG_MOBICORE_SUPPORT=m
 CONFIG_MOBICORE_API=m
 CONFIG_OPPO_DEBUG_ASSERT=y
-#jiangyg@OnlineRd.PM, 2013/10/18, Add for device selection(msm_13095)
 CONFIG_OPPO_DEVICE_MSM_13095=y
 CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
 CONFIG_TOUCHSCREEN_GT9XX=y
@@ -529,12 +528,8 @@ CONFIG_OPPO_SMB358=y
 CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS=y
 CONFIG_NLS_UTF8=y
 CONFIG_HALL=y
-#//LiuPing@ProDrv.Sen, 2014-03-22,add for pswtich 
 CONFIG_PSWITCH=y
-#//qiang.zhang@ProDrv.Sen, 2014-03-21,add for uei 
 CONFIG_UEI=y
-#//LiuPing@ProDrv.Sen, 2014-03-20,add for rotor hall sensor ,m1120.
 CONFIG_DHALL_M1120=y
-#//wenjie.Liu@Prd.SysApp.PowerManager, 2014/03/21, Add for :PN65T_NFC
-CONFIG_NFC_DEVICES=y
-CONFIG_PN65T_NFC=y
+CONFIG_NFC_DEVICES=m
+CONFIG_PN65T_NFC=n
